--- a/Testrun/Base.lproj/Main.storyboard
+++ b/Testrun/Base.lproj/Main.storyboard
@@ -21,13 +21,13 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Value" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A4x-oO-SVB">
-                                            <rect key="frame" x="102" y="7.5" width="96" height="30"/>
+                                            <rect key="frame" x="114" y="7.5" width="72" height="30"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                             <color key="textColor" red="0.19783163070000001" green="0.2031520903" blue="0.21727466579999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g2d-DA-0Es">
-                                            <rect key="frame" x="20" y="7.5" width="64" height="29"/>
+                                            <rect key="frame" x="20.5" y="7" width="96" height="29"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
                                             <color key="textColor" red="0.19783163070000001" green="0.2031520903" blue="0.21727466579999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
@@ -67,6 +67,9 @@
                                     <color key="titleColor" red="0.0" green="0.83657974004745483" blue="0.74327272176742554" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="ready:" destination="b23-9E-OBb" eventType="touchUpInside" id="tcd-dY-GQ7"/>
+                                </connections>
                             </button>
                         </barButtonItem>
                     </navigationItem>
